src/components/Modal/Modal.module.css
.modal {
    min-height: 100vh;
    width: 100vw;
    background-color: rgba(0, 0, 0, 0.5);
    position: fixed;
    top: 0;
    left: 0;
    display: flex;
    justify-content: center;
    align-items: center;
    z-index: 2;
    animation: closing 0.35s forwards;
}

.modal.dark {
    color: var(--gray);
}

.modal.light {
    color: var(--black);
}

.modal.active {
    animation: starting 0.3s forwards;
}


.modalContent {
    border: 1px solid;
    border-radius: 0.3rem;
    padding: 1.5rem;
    animation: closing 0.35s forwards;
}

.modalContent.light {
    background-color: var(--bgLight);
    border-color: var(--borderLight);
}

.modalContent.dark {
    background-color: var(--bgDark);
    border-color: var(--gray);
}

.modalContent.active {
    animation: opening 0.3s forwards;
}

@keyframes opening {
    0% {
        opacity: 0;
        -webkit-transform: scale(0.5);
        transform: scale(0.5);
    }
    100% {
        -webkit-transform: scale(1);
        transform: scale(1);
        opacity: 1;
    }
}

@keyframes closing {
    0% {
        opacity: 1;
        visibility: visible;
    }
    100% {
        opacity: 0;
        visibility: hidden;
    }
}

@keyframes starting {
    0% {
        pointer-events: none;
        opacity: 0;
    }
    100% {
        pointer-events: all;
        opacity: 1;
    }

}

